--- a/index.css
+++ b/index.css
@@ -1,5 +1,90 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap');
+
+
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 } 
+
+main{
+    min-height: 30vh;
+    max-width: 50%;
+    border: 5px solid rgb(3, 3, 57);
+    border-radius: 50px;
+    margin: 0 auto;
+    margin-top: 30px;
+    overflow: hidden;
+}
+
+.hero{
+    background: url("/img/i86551-burger-au-bacon-et-au-cheddar.jpg") center / cover no-repeat;
+    min-height: 20vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 30px;
+    
+}
+
+.hero div{
+    max-width: 350px;
+    text-align: left;
+}
+
+.hero h2, .hero p{
+    color: white;
+    font-size: 22px;
+}
+
+.main-order{
+    padding: 20px 70px;
+    font-family: "Roboto";
+}
+
+.menu-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 35px;
+}
+
+.item-emoji{
+    font-size: 50px;
+}
+
+.item-descr {
+    font-size: 20px;
+}
+
+#item-name{
+    font-weight: bold;
+}
+
+#item-ingr{
+    color: rgb(153, 149, 149);
+}
+
+
+.item-add {
+
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;          
+    border: 2px solid #000;   
+    
+    display: flex;               
+    align-items: center;
+    justify-content: center;
+
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-left: auto;
+}
+
+.line{
+    border: 1px solid #b7b4b4; 
+}
+
